# GrayC

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu-18.04.yml  ubuntu-20.04.yml  ubuntu-22.04.yml
ISSTA-2023-AE/: README.md
ISSTA-2023-AE/ae-source-code/: 1-run-grayc-small.sh  1-run-grayc-tiny.sh  1-run-grayc.sh  10-run-AFLCompiler-small.sh  10-run-AFLCompiler-tiny.sh  10-run-AFLCompiler.sh  11-get-gen-comp-rate.sh  12-get-cov-gcc.sh  13-get-cov-llvm.sh  2-run-grayc-conservative-small.sh  2-run-grayc-conservative-tiny.sh  2-run-grayc-conservative.sh  3-run-grayc-no-cov-guidance-small.sh  3-run-grayc-no-cov-guidance-tiny.sh  3-run-grayc-no-cov-guidance.sh  4-run-grayc-fragments-fuzzing-small.sh  4-run-grayc-fragments-fuzzing-tiny.sh  4-run-grayc-fragments-fuzzing.sh  5-run-clang-fuzzer-small.sh  5-run-clang-fuzzer-tiny.sh  5-run-clang-fuzzer.sh  6-run-csmith-small.sh  6-run-csmith-tiny.sh  6-run-csmith.sh  7-run-grammarinator-small.sh  7-run-grammarinator-tiny.sh  7-run-grammarinator.sh  8-run-PolyGlot-tiny.sh  9-run-RegExpMutator-small.sh  9-run-RegExpMutator-tiny.sh  9-run-RegExpMutator.sh  README.md  run-small.sh  run-tiny.sh
ISSTA-2023-AE/data/: Coverage 5.3.xlsx  README.md  Throughput and Static Validity Rate-5.2.xlsx
ISSTA-2023-AE/fuzzer/: 0-install-csmit.sh  0-install-grammarinator.sh  0-install-req.sh  2-prepare-env.sh  3-copy-fuzzer-agg.sh  3-copy-fuzzer.sh  4-build-fuzzer.sh  5-run-fuzzer.sh  README.md  install-fuzzers-agg.sh  install-fuzzers-cons.sh  install-fuzzers-grayc.sh  install-fuzzers.sh  run-fuzzers.sh
ISSTA-2023-AE/fuzzer/data/: README.md
ISSTA-2023-AE/fuzzer/tool/src/mutator_zips-v4/expression-mutator/: CMakeLists.txt  ExpressionMutator.cpp
ISSTA-2023-AE/testing/: 0-install-frama-c.sh  0-install-remove-parens.sh  1-download-gcc.sh  2-compilation-rate.sh  A-run-fuzzer.sh  B-compilation-rate.sh  README.md
Utils/: CMakeLists.txt  ClangFuzzerCustomRandom.cpp  ClangFuzzerCustomRandom.h
clang-diff/: CMakeLists.txt  ClangDiff.cpp
dockerfiles/: ubuntu-18.04.dockerfile  ubuntu-20.04.dockerfile  ubuntu-22.04.dockerfile
grayc/: CMakeLists.txt  Compatability.h  GlobList.cpp  GlobList.h  GrayC.cpp  GrayC.h  GrayCCheck.cpp  GrayCCheck.h  GrayCDiagnosticConsumer.cpp  GrayCDiagnosticConsumer.h  GrayCForceLinker.h  GrayCModule.cpp  GrayCModule.h  GrayCModuleRegistry.h  GrayCOptions.cpp  GrayCOptions.h  GrayCProfiling.cpp  GrayCProfiling.h  add_new_mutator.py
grayc/cmutation/: AssignmentExpressionMutator.cpp  AssignmentExpressionMutator.h  CMakeLists.txt  CMutationModule.cpp  ConditionalExpressionMutator.cpp  ConditionalExpressionMutator.h  DuplicateStatementMutator.cpp  DuplicateStatementMutator.h  JumpMutator.cpp  JumpMutator.h  UnaryOperatorCheck.cpp  UnaryOperatorCheck.h
grayc/cxxmutation/: CMakeLists.txt  CXXMutationModule.cpp  CXXUnaryOperatorCheck.cpp  CXXUnaryOperatorCheck.h
grayc/tool/: CMakeLists.txt  GrayCMain.cpp  GrayCMain.h  GrayCToolMain.cpp
grayc/utils/: CMakeLists.txt  FixItHintUtils.cpp  FixItHintUtils.h  GrayCRandomManager.cpp  GrayCRandomManager.h  LexerUtils.cpp  LexerUtils.h
scripts/: README.md
scripts/LLVM-Test-suite-coverage/: 1-get-llvm-testsuite-single-source.sh  2-llvm-testsuite-reg-cov.sh  README.md
scripts/coverage/: 0-install-gcc-cov.sh  0-install-llvm-cov-rt.sh  0-install-llvm-cov.sh  0-set-gcov-version.sh  1-wrapper-get-coverage.sh  3-gen-statistic-gcov-diff-tab_gfauto.sh  4-cov-stat.sh  README.md  get-backend-cov.sh
scripts/crash-testing/: 0-prepare-folder.sh  10-get-res.sh
scripts/enhanCer/: 1-1-prepare-folder.sh  1-2-filter-compiled.sh  1-3-transform.py  1-main-enhanCer-option-1.sh  2-main-coverage-diff.sh  2-reduce2func-instCombine.sh  README.md
scripts/general/: 1-download-llvm.sh  README.md
src/: README.md
transformation/: CMakeLists.txt
transformation/assignment-mutator/: AssignmentMutator.cpp  AssignmentMutator.h  CMakeLists.txt
transformation/clang-fuzzer/: CMakeLists.txt  ClangFuzzer.cpp  CustomClangFuzzer.h
transformation/constant-mutator/: CMakeLists.txt  ConstantMutator.cpp  ConstantMutator.h
transformation/delete-mutator/: CMakeLists.txt  DeleteMutator.cpp  DeleteMutator.h
transformation/duplicate-mutator/: CMakeLists.txt  DuplicateMutator.cpp  DuplicateMutator.h
transformation/expression-mutator/: CMakeLists.txt  ExpressionMutator.cpp  ExpressionMutator.h
transformation/function-extractor/: CMakeLists.txt  FunctionExtractor.cpp  FunctionExtractor.h
transformation/function-merger/: CMakeLists.txt  FunctionMerger.cpp  FunctionMerger.h
transformation/jump-mutator/: CMakeLists.txt  JumpMutator.cpp
transformation/rename-transform/: CMakeLists.txt  RenameTransform.cpp  RenameTransform.h
(+4199 files in other folders)
